Update pom.xml to my details

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>github-oauth</artifactId>
-    <version>0.20</version>
+    <version>0.20-SNAPSHOT</version>
     <name>Github Authentication plugin</name>
     <description>A Jenkins authentication plugin that delegates to github.  We also implement an Authorization Strategy that users the acquired OAuth token to interact with the Github API to determine a users level of access to Jenkins.</description>
     <packaging>hpi</packaging>
@@ -35,12 +35,17 @@
             <name>Sam Kottler</name>
             <timezone>-5</timezone>
         </developer>
+        <developer>
+          <id>s0undt3ch</id>
+          <name>Pedro Algarvio</name>
+          <timezone>0</timezone>
+        </developer>
     </developers>
 
     <scm>
-        <connection>scm:git:ssh://github.com/jenkinsci/github-oauth-plugin.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/jenkinsci/github-oauth-plugin.git</developerConnection>
-        <url>https://github.com/jenkinsci/github-oauth-plugin</url>
+        <connection>scm:git:ssh://github.com/s0undt3ch/github-oauth-plugin.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/s0undt3ch/github-oauth-plugin.git</developerConnection>
+        <url>https://github.com/s0undt3ch/github-oauth-plugin</url>
     </scm>
 
   <!-- Use repositories suggested in plugin tutorial: https://wiki.jenkins-ci.org/display/JENKINS/Plugin+tutorial -->
