--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     </parent>
 
     <groupId>org.jenkins-ci.plugins</groupId>
+    <artifactId>github-oauth-saltstack</artifactId>
     <artifactId>github-oauth</artifactId>
     <version>0.20-SNAPSHOT</version>
     <name>Github Authentication plugin</name>
