--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
               <artifactId>maven-release-plugin</artifactId>
               <version>2.4.1</version>
               <configuration>
+                <goals></goals>
                 <useReleaseProfile>false</useReleaseProfile>
                 <releaseProfiles>release</releaseProfiles>
                 <autoVersionSubmodules>true</autoVersionSubmodules>
